--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typescript": "tsc"
+    "build": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist"
   },
   "keywords": [],
   "author": "xeonarno",
