--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
             - run: npm ci
             - name: Install Changeset
               run: npm install -g @changesets/cli
+            - name: fix tsup
+              run: npm i -D tsup typescript
             - name: Prepare for Publish
               run: "npm run lint && npm test"
             - name: Build
@@ -32,6 +34,8 @@ jobs:
             - run: npm ci
             - name: Install Changeset
               run: npm install -g @changesets/cli
+            - name: fix tsup
+              run: npm i -D tsup typescript
             - name: Prepare for Publish
               run: "npm run lint && npm test"
             - name: Build
