--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,8 @@ jobs:
               run: "npm run lint && npm test"
             - name: Build
               run: npm run build --if-present
+            - name: Versionning
+              run: npx changeset version
             - name: Publish
               run: npx changeset publish --access public
               env:
