--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,10 @@ jobs:
               run: npm run build --if-present
             - name: Versionning
               run: npx changeset version
-            - name: Publish
-              run: npx changeset publish --access public --otp=${{ secrets.NPM_TOKEN }}
-              env:
-                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+            - id: publish
+              uses: JS-DevTools/npm-publish@v2.2.2
+              with:
+                token: ${{ secrets.NPM_TOKEN }}
+                access: public
+            - if: ${{ steps.publish.outputs.type }}
+              run: echo "Version changed!"
