--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,12 +47,13 @@ jobs:
               with:
                 token: ${{ secrets.NPM_TOKEN }}
                 access: public
+            - name: Push changes
+              uses: ad-m/github-push-action@v0.6.0
+              with:
+                github_token: ${{ secrets.GIT_TOKEN }}
+                branch: main
+                force: true
+                tags: true
+                
             - if: ${{ steps.publish.outputs.type }}
               run: echo "Version changed!"
-            - name: Save version
-              run: |
-                git config user.name github-actions
-                git config user.email github-actions@github.com
-                git add .
-                git commit -m "generated"
-                git push
